# Raspi-TelemHost-Firmware

./: .gitignore  CMakeLists.txt  README.md  dashboard.qrc  startup.sh  test.txt
DAQ/Inc/: fe12.h  logthread.h  observer.h  telemetry.h  variables.h
DAQ/Src/: fe12.c  gen5_inv.c  main.cpp  observer.cpp  telemetry.cpp  variables.cpp
DAQ/ui/: dashboard.qml  debug.qml  drive.qml  flashes.qml  practice.qml
Dashboard/: main_menu.py  pacman.py  tetris.py  twenty.py
Test/: canbus.py
Testing/: canbus.py
WebApp/: config.py  ingestion.py  main.py  services.py
WebApp/Frontend/: app.js  index.html  package-lock.json  package.json  style.css
WebApp/Frontend/src/: App.css  App.tsx
WebApp/Frontend/src/components/: Example.tsx  Graph.css  Graph.tsx  GraphFilterSidebar.js  Navbar.tsx  Options.css  Options.tsx
WebApp/cpp/: CMakeLists.txt
WebApp/cpp/Include/: ingestion.h  services.h
WebApp/cpp/Source/: CMakeLists.txt  ingestion.cpp  main.cpp  services.cpp
backend/: CMakeLists.txt
backend/include/: ingestion.h
backend/src/: ingestion.cpp  main.cpp
cmake/: deps.cmake
config/: config.json
dashboard/: CMakeLists.txt  dashboard.qrc  deps.cmake
dashboard/inc/: daq.h  gen5_inv.h  logthread.h  variables.h
dashboard/src/: daq.cpp  main.cpp  variables.cpp
dashboard/ui/: dashboard.qml  debug.qml  drive.qml  flashes.qml
services/daq/: CMakeLists.txt  README.md  vcpkg.json
services/daq/include/: ingestion.h
services/daq/src/: decode.cpp  fe12_db.c  ingestion.cpp  logger.cpp  main.cpp  publisher.cpp
services/ingestion/: CMakeLists.txt  CMakePresets.json  vcpkg-configuration.json
services/ingestion/include/: cm200_db.h  decode.h  fe12.h  fe12_db.h  ingestion.h
services/ingestion/src/: cm200_db.c  fe12.c  ingestion.cpp  main.cpp
services/web/: server.py
services/web/public/: app.js  index.html  style.css
test/: FE12.dbc  canbus.py  knobs.py  replay.py
